@@ -1,3 +1,7 @@
+2001-01-19  Kazu Hirata  <kazu@hxi.com>
+
+	* config/tc-alpha.c: Fix formatting.
+
 2001-01-18  Kazu Hirata  <kazu@hxi.com>
 
 	* config/tc-alpha.c: Fix formatting.
